2026-01-07  Karl Berry  <karl@freefriends.org>

	* COPYRIGHT,
	* main.c: 2026.

2025-12-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.22  Stable version.
	* configure.ac: Bump version.
	* main.c: Add command line option '--version'.
	* tests/upmendex.test: Add tests for command line options.
	Thank Ernst Reissner for the proposal.
	https://github.com/t-tk/upmendex-package/issues/16
	* fwrite.c: Better treatment of Ö,ö,Ő,ő in Estonian.

2025-10-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* convert.c: Fix bug of out of bound read.
	Thanks to Ryan Lee.
	https://www.tug.org/pipermail/tex-live/2025-October/051800.html
	https://tug.org/pipermail/tex-k/2025-October/004208.html
	* tests/romalpA.idx, tests/romalpA-[56].ind:
	Add tests for roman numerals.

2025-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.21  Stable version.
	* configure.ac: Bump version.
	* fwrite.c: Fix bug on page range.
	Thanks to @pejsek02468.
	https://github.com/t-tk/upmendex-package/issues/15
	* fread.c, convert.c:
	Avoid segmentation fault about page_compositor and page_precedence.
	Thanks to Lemures Lemniscati.
	https://okumuralab.org/tex/mod/forum/discuss.php?d=3976#p24754
	https://github.com/texjporg/tex-jp-build/issues/181
	* tests/pprec.test, tests/range.idx,
	tests/range4.ist, tests/range{1,2,3,4}.ind:
	Add tests for page range.
	* Makefile.am: Adjust.

2025-06-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* fwrite.c: Better treatment of Ŋ,ŋ in Finnish.
	Better treatment of Þ,þ in Danish, Norwegian, Swedish and Finnish.
	Better treatment of Ę,ę in Norwegian and Swedish.
	Better treatment of Ð,ð,Đ,đ in Danish, Norwegian, Finnish, Swedish
	and Icelandic.
	Better treatment of Ü,ü,Ű,ű in Danish, Norwegian, Swedish and Finnish.
	Better treatment of Ö,ö,Ø,ø,Ő,ő,Ô,ô,Œ,œ,Æ,æ,Ä,ä in Swedish.

2025-06-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* fwrite.c: Support digraph AA and
	better treatment of Ø,ø,Ö,ö,Æ,æ,Ä,ä in Danish and Norwegian.