@@ -59,7 +59,8 @@ TESTS = tests/upmendex.test \
 EXTRA_DIST += $(TESTS)
 
 ## tests/upmendex.test
-EXTRA_DIST += tests/foo.idx tests/foo.ind \
+EXTRA_DIST += tests/sample.idx tests/sample.ind \
+	tests/foo.idx tests/foo.ind \
 	tests/uni.idx tests/uni.dict tests/uni.ist \
 	tests/uni1.ist tests/uni2.ist tests/uni.ind \
 	tests/tort.idx tests/tortW.idx tests/head1.ist \
