@@ -1,0 +1,19 @@
+\indexentry{alpha}{1}
+\indexentry{random text|bold}{2}
+\indexentry{random text|(}{9}
+\indexentry{random text|)}{11}
+\indexentry{alpha!beta}{3}
+\indexentry{alpha!phi}{5}
+\indexentry{alpha!phi!sigma}{6}
+\indexentry{alpha!phi!rho}{7}
+\indexentry{alpha!beta!delta}{8}
+\indexentry{alpha!beta!gamma}{10}
+\indexentry{alpha!phi!sigma}{12}
+\indexentry{alpha!phi!rho}{12}
+\indexentry{alpha!phi!sigma}{13}
+\indexentry{alpha!phi!sigma}{14}
+\indexentry{alpha!phi!rho}{14}
+\indexentry{premature!LFD}{99999
+\indexentry{premature!LFD}
+\indexentry{premature!LFD
+\indexentry
